# roki-mb-interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
Inc/: MbClient.hpp  Motherboard.hpp  MotherboardAdapter.hpp  RokiRcb4Adapter.hpp  Version.hpp  Zubr.hpp
Inc/Helpers/: IMUFrame.hpp
Inc/roki-mb-interface/: MbAliases.hpp  MbClient.hpp  MbSerial.hpp  Motherboard.hpp  MotherboardAdapter.hpp  RokiRcb4.hpp  RokiRcb4Adapter.hpp  Zubr.hpp  ZubrAdapter.hpp
Inc/roki-mb-interface/Helpers/: DescriptorWrapper.hpp  IMUFrame.hpp
Inc/roki-mb-interface/Protocols/: RokiRcb4Adapter.hpp  Zubr.hpp  ZubrAdapter.hpp
Src/: MbClient.cpp  MbSerial.cpp  MotherboardAdapter.cpp  MotherboardImpl.cpp  MotherboardMock.cpp  RokiRcb4.cpp  RokiRcb4Adapter.cpp  ZubrAdapter.cpp  ZubrImpl.cpp  ZubrMock.cpp
Src/Helpers/: DescriptorWrapper.cpp  IMUFrame.cpp
Src/Protocols/: RokiRcb4.cpp  RokiRcb4Adapter.cpp  ZubrAdapter.cpp  ZubrImpl.cpp  ZubrMock.cpp
bindings/: MBBinding.cpp  PyBinding.hpp  bindings.cmake
examples/: TestAdapter.cpp  TestBody.cpp  TestBodyImu.cpp  examples.cmake  tests.cmake
examples/scripts/: DumpFrCont.py  TestBody.py  TestBodyImu.py
inc/: BodyInterface.hpp  BodyPackSender.hpp  BodyRPC.hpp  BodySingleSender.hpp  Helpers.hpp  IMUInterface.hpp  IMURPC.hpp  MBInterface.hpp  MbAliases.hpp  MbClient.hpp  MbDefaultConfig.hpp  MbMessages.hpp  MbSerial.hpp  MbService.hpp  Motherboard.hpp  MotherboardAdapter.hpp  MotherboardAliases.hpp  MotherboardInterface.hpp  Rcb4Adapter.hpp  RokiRcb4.hpp  RokiRcb4Adapter.hpp  SerialInterface.hpp  Version.hpp  Zubr.hpp  ZubrAdapter.hpp
inc/Helpers/: DescriptorWrapper.hpp
src/: BodyInterface.cpp  BodyRPC.cpp  Helpers.cpp  IMUInterface.cpp  IMURPC.cpp  MBInterface.cpp  MbClient.cpp  MbDefaultConfig.cpp  MbMessages.cpp  MbSerial.cpp  Motherboard.cpp  MotherboardAdapter.cpp  Rcb4Adapter.cpp  RokiRcb4.cpp  RokiRcb4Adapter.cpp  SerialInterface.cpp  Zubr.cpp  ZubrAdapter.cpp
tests/: Picamera2Mock.py  RokiPyTest.py  RunTests.cpp  SerialInterfaceTest.cpp  TakePhotos.py  Test.cpp  TestAdapter.cpp  TestBQ.py  TestBinding.py  TestBody.cpp  TestBodyIMU.py  TestHeadIMU.py  TestIMU.cpp  TestResetSC.py  TestSF.py  ZubrMem.py  tests.cmake
tests/scripts/: DumpFrCont.py  TakePhotos.py  TestBinding.py  TestBody.py  TestBodyImu.py  TestHeadIMU.py  TestImu.py
tmp/: SystemState.cpp  SystemState.hpp  TestSysState.cpp
